fix navbar logo alignment

--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -16,7 +16,7 @@
 .logo {
     width: calc(var(--sidebar-width) - 20px);
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
 .createArticleButton {
